Added new message for artifact localization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_message_files(
     ArtifactMap.msg
     ArtifactView.msg
     ArtifactImg.msg
+    PotentialArtifact.msg
   )
 
 generate_messages(
